assets/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: "true"
    ingress.kubernetes.io/force-ssl-redirect: "true"
  name: climateservice
  namespace: default
spec:
  rules:
  - host: example.com
    http:
      paths:
      - path: /temperature
        backend:
          serviceName: climateservice-service
          servicePort: 8080
      - path: /humidity
        backend:
          serviceName: climateservice-service
          servicePort: 8080
  tls:
  - hosts:
    - example.com
    secretName: climateservice
